Syntactic_Analyser/y.output
Terminais sem uso na gramática

   DIGITO
   COMENTARIO


Estado 8 conflitos: 1 de deslocamento/redução
Estado 9 conflitos: 1 de deslocamento/redução
Estado 10 conflitos: 1 de deslocamento/redução
Estado 11 conflitos: 2 de deslocamento/redução
Estado 15 conflitos: 1 de deslocamento/redução
Estado 17 conflitos: 2 de deslocamento/redução
Estado 30 conflitos: 1 de deslocamento/redução
Estado 124 conflitos: 1 de deslocamento/redução
Estado 128 conflitos: 1 de deslocamento/redução
Estado 129 conflitos: 1 de deslocamento/redução
Estado 130 conflitos: 1 de deslocamento/redução
Estado 131 conflitos: 1 de deslocamento/redução
Estado 132 conflitos: 1 de deslocamento/redução
Estado 133 conflitos: 1 de deslocamento/redução
Estado 142 conflitos: 1 de deslocamento/redução
Estado 154 conflitos: 1 de deslocamento/redução
Estado 155 conflitos: 1 de deslocamento/redução
Estado 156 conflitos: 1 de deslocamento/redução
Estado 157 conflitos: 1 de deslocamento/redução
Estado 158 conflitos: 1 de deslocamento/redução
Estado 159 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 programa: SIMBOLO_PROGRAM IDENT ';' corpo '.'
    2         | error IDENT
    3         | SIMBOLO_PROGRAM error ';' corpo '.'
    4         | SIMBOLO_PROGRAM IDENT error corpo '.'
    5         | SIMBOLO_PROGRAM IDENT ';' error '.'
    6         | SIMBOLO_PROGRAM IDENT ';' corpo error

    7 corpo: dc SIMBOLO_BEGIN comandos SIMBOLO_END
    8      | error SIMBOLO_BEGIN comandos SIMBOLO_END
    9      | dc error comandos SIMBOLO_END
   10      | dc SIMBOLO_BEGIN comandos error

   11 dc: dc_c dc_v dc_p
   12   | error dc_v dc_p
   13   | dc_c error dc_p
   14   | dc_c dc_v error

   15 dc_c: SIMBOLO_CONST IDENT '=' numero ';' dc_c
   16     | error SIMBOLO_CONST IDENT '=' numero ';' dc_c
   17     | SIMBOLO_CONST error '=' numero ';' dc_c
   18     | SIMBOLO_CONST IDENT error numero ';' dc_c
   19     | SIMBOLO_CONST IDENT '=' error ';' dc_c
   20     | SIMBOLO_CONST IDENT '=' numero error dc_c
   21     | SIMBOLO_CONST IDENT '=' numero ';' error
   22     | %empty

   23 dc_v: SIMBOLO_VAR variaveis ':' tipo_var ';' dc_v
   24     | error variaveis ':' tipo_var ';' dc_v
   25     | SIMBOLO_VAR error ':' tipo_var ';' dc_v
   26     | SIMBOLO_VAR variaveis error tipo_var ';' dc_v
   27     | SIMBOLO_VAR variaveis ':' error ';' dc_v
   28     | SIMBOLO_VAR variaveis ':' tipo_var error dc_v
   29     | SIMBOLO_VAR variaveis ':' tipo_var ';' error
   30     | %empty

   31 tipo_var: SIMBOLO_REAL
   32         | SIMBOLO_INTEGER
   33         | error

   34 variaveis: IDENT mais_var

   35 mais_var: ',' variaveis
   36         | %empty

   37 dc_p: SIMBOLO_PROCEDURE IDENT parametros ';' corpo_p dc_p
   38     | %empty

   39 parametros: '(' lista_par ')'
   40           | %empty

   41 lista_par: variaveis ':' tipo_var mais_par

   42 mais_par: ';' lista_par
   43         | %empty

   44 corpo_p: dc_loc SIMBOLO_BEGIN comandos SIMBOLO_END ';'

   45 dc_loc: dc_v

   46 lista_arg: '(' argumentos ')'
   47          | %empty

   48 argumentos: IDENT mais_ident

   49 mais_ident: ';' argumentos
   50           | %empty

   51 pfalsa: SIMBOLO_ELSE cmd
   52       | %empty

   53 comandos: cmd ';' comandos
   54         | %empty

   55 cmd: SIMBOLO_READ '(' variaveis ')'
   56    | SIMBOLO_WRITE '(' variaveis ')'
   57    | SIMBOLO_WHILE '(' condicao ')' SIMBOLO_DO cmd
   58    | SIMBOLO_WHILE error condicao ')' SIMBOLO_DO cmd
   59    | SIMBOLO_IF condicao SIMBOLO_THEN cmd pfalsa
   60    | IDENT ':' '=' expressao
   61    | IDENT lista_arg
   62    | SIMBOLO_BEGIN comandos SIMBOLO_END
   63    | SIMBOLO_FOR IDENT ':' '=' NUMERO_INT SIMBOLO_TO NUMERO_INT SIMBOLO_DO cmd

   64 condicao: expressao relacao expressao

   65 relacao: '='
   66        | '<' '>'
   67        | '>' '='
   68        | '<' '='
   69        | '>'
   70        | '<'

   71 expressao: termo outros_termos

   72 op_un: '+'
   73      | '-'
   74      | %empty

   75 outros_termos: op_ad termo outros_termos
   76              | %empty

   77 op_ad: '+'
   78      | '-'

   79 termo: op_un fator mais_fatores

   80 mais_fatores: op_mul fator mais_fatores
   81             | %empty

   82 op_mul: '*'
   83       | '/'

   84 fator: IDENT
   85      | numero
   86      | '(' expressao ')'

   87 numero: NUMERO_INT
   88       | NUMERO_REAL


Terminais, com as regras onde eles aparecem

$end (0) 0
'(' (40) 39 46 55 56 57 86
')' (41) 39 46 55 56 57 58 86
'*' (42) 82
'+' (43) 72 77
',' (44) 35
'-' (45) 73 78
'.' (46) 1 3 4 5
'/' (47) 83
':' (58) 23 24 25 27 28 29 41 60 63
';' (59) 1 3 5 6 15 16 17 18 19 21 23 24 25 26 27 29 37 42 44 49 53
'<' (60) 66 68 70
'=' (61) 15 16 17 19 20 21 60 63 65 67 68
'>' (62) 66 67 69
error (256) 2 3 4 5 6 8 9 10 12 13 14 16 17 18 19 20 21 24 25 26 27
    28 29 33 58
DIGITO (258)
NUMERO_INT (259) 63 87
NUMERO_REAL (260) 88
IDENT (261) 1 2 4 5 6 15 16 18 19 20 21 34 37 48 60 61 63 84
COMENTARIO (262)
SIMBOLO_PROGRAM (263) 1 3 4 5 6
SIMBOLO_BEGIN (264) 7 8 10 44 62
SIMBOLO_END (265) 7 8 9 44 62
SIMBOLO_CONST (266) 15 16 17 18 19 20 21
SIMBOLO_VAR (267) 23 25 26 27 28 29
SIMBOLO_REAL (268) 31
SIMBOLO_INTEGER (269) 32
SIMBOLO_PROCEDURE (270) 37
SIMBOLO_ELSE (271) 51
SIMBOLO_READ (272) 55
SIMBOLO_WRITE (273) 56
SIMBOLO_WHILE (274) 57 58
SIMBOLO_IF (275) 59
SIMBOLO_THEN (276) 59
SIMBOLO_DO (277) 57 58 63
SIMBOLO_FOR (278) 63
SIMBOLO_TO (279) 63


Não terminais com as regras onde eles aparecem

$accept (38)
    à esquerda: 0
programa (39)
    à esquerda: 1 2 3 4 5 6, à direita: 0
corpo (40)
    à esquerda: 7 8 9 10, à direita: 1 3 4 6
dc (41)
    à esquerda: 11 12 13 14, à direita: 7 9 10
dc_c (42)
    à esquerda: 15 16 17 18 19 20 21 22, à direita: 11 13 14 15 16
    17 18 19 20
dc_v (43)
    à esquerda: 23 24 25 26 27 28 29 30, à direita: 11 12 14 23 24
    25 26 27 28 45
tipo_var (44)
    à esquerda: 31 32 33, à direita: 23 24 25 26 28 29 41
variaveis (45)
    à esquerda: 34, à direita: 23 24 26 27 28 29 35 41 55 56
mais_var (46)
    à esquerda: 35 36, à direita: 34
dc_p (47)
    à esquerda: 37 38, à direita: 11 12 13 37
parametros (48)
    à esquerda: 39 40, à direita: 37
lista_par (49)
    à esquerda: 41, à direita: 39 42
mais_par (50)
    à esquerda: 42 43, à direita: 41
corpo_p (51)
    à esquerda: 44, à direita: 37
dc_loc (52)
    à esquerda: 45, à direita: 44
lista_arg (53)
    à esquerda: 46 47, à direita: 61
argumentos (54)
    à esquerda: 48, à direita: 46 49
mais_ident (55)
    à esquerda: 49 50, à direita: 48
pfalsa (56)
    à esquerda: 51 52, à direita: 59
comandos (57)
    à esquerda: 53 54, à direita: 7 8 9 10 44 53 62
cmd (58)
    à esquerda: 55 56 57 58 59 60 61 62 63, à direita: 51 53 57 58
    59 63
condicao (59)
    à esquerda: 64, à direita: 57 58 59
relacao (60)
    à esquerda: 65 66 67 68 69 70, à direita: 64
expressao (61)
    à esquerda: 71, à direita: 60 64 86
op_un (62)
    à esquerda: 72 73 74, à direita: 79
outros_termos (63)
    à esquerda: 75 76, à direita: 71 75
op_ad (64)
    à esquerda: 77 78, à direita: 75
termo (65)
    à esquerda: 79, à direita: 71 75
mais_fatores (66)
    à esquerda: 80 81, à direita: 79 80
op_mul (67)
    à esquerda: 82 83, à direita: 80
fator (68)
    à esquerda: 84 85 86, à direita: 79 80
numero (69)
    à esquerda: 87 88, à direita: 15 16 17 18 20 21 85


Estado 0

    0 $accept: . programa $end

    error            deslocar, e ir ao estado 1
    SIMBOLO_PROGRAM  deslocar, e ir ao estado 2

    programa  ir ao estado 3


Estado 1

    2 programa: error . IDENT

    IDENT  deslocar, e ir ao estado 4


Estado 2

    1 programa: SIMBOLO_PROGRAM . IDENT ';' corpo '.'
    3         | SIMBOLO_PROGRAM . error ';' corpo '.'
    4         | SIMBOLO_PROGRAM . IDENT error corpo '.'
    5         | SIMBOLO_PROGRAM . IDENT ';' error '.'
    6         | SIMBOLO_PROGRAM . IDENT ';' corpo error

    error  deslocar, e ir ao estado 5
    IDENT  deslocar, e ir ao estado 6


Estado 3

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 7


Estado 4

    2 programa: error IDENT .

    $padrão  reduzir usando a regra 2 (programa)


Estado 5

    3 programa: SIMBOLO_PROGRAM error . ';' corpo '.'

    ';'  deslocar, e ir ao estado 8


Estado 6

    1 programa: SIMBOLO_PROGRAM IDENT . ';' corpo '.'
    4         | SIMBOLO_PROGRAM IDENT . error corpo '.'
    5         | SIMBOLO_PROGRAM IDENT . ';' error '.'
    6         | SIMBOLO_PROGRAM IDENT . ';' corpo error

    error  deslocar, e ir ao estado 9
    ';'    deslocar, e ir ao estado 10


Estado 7

    0 $accept: programa $end .

    $padrão  aceitar


Estado 8

    3 programa: SIMBOLO_PROGRAM error ';' . corpo '.'

    error          deslocar, e ir ao estado 11
    SIMBOLO_CONST  deslocar, e ir ao estado 12

    error              [reduzir usando a regra 22 (dc_c)]
    SIMBOLO_BEGIN      reduzir usando a regra 22 (dc_c)
    SIMBOLO_VAR        reduzir usando a regra 22 (dc_c)
    SIMBOLO_PROCEDURE  reduzir usando a regra 22 (dc_c)

    corpo  ir ao estado 13
    dc     ir ao estado 14
    dc_c   ir ao estado 15


Estado 9

    4 programa: SIMBOLO_PROGRAM IDENT error . corpo '.'

    error          deslocar, e ir ao estado 11
    SIMBOLO_CONST  deslocar, e ir ao estado 12

    error              [reduzir usando a regra 22 (dc_c)]
    SIMBOLO_BEGIN      reduzir usando a regra 22 (dc_c)
    SIMBOLO_VAR        reduzir usando a regra 22 (dc_c)
    SIMBOLO_PROCEDURE  reduzir usando a regra 22 (dc_c)

    corpo  ir ao estado 16
    dc     ir ao estado 14
    dc_c   ir ao estado 15


Estado 10

    1 programa: SIMBOLO_PROGRAM IDENT ';' . corpo '.'
    5         | SIMBOLO_PROGRAM IDENT ';' . error '.'
    6         | SIMBOLO_PROGRAM IDENT ';' . corpo error

    error          deslocar, e ir ao estado 17
    SIMBOLO_CONST  deslocar, e ir ao estado 12

    error              [reduzir usando a regra 22 (dc_c)]
    SIMBOLO_BEGIN      reduzir usando a regra 22 (dc_c)
    SIMBOLO_VAR        reduzir usando a regra 22 (dc_c)
    SIMBOLO_PROCEDURE  reduzir usando a regra 22 (dc_c)

    corpo  ir ao estado 18
    dc     ir ao estado 14
    dc_c   ir ao estado 15


Estado 11

    8 corpo: error . SIMBOLO_BEGIN comandos SIMBOLO_END
   12 dc: error . dc_v dc_p
   16 dc_c: error . SIMBOLO_CONST IDENT '=' numero ';' dc_c

    error          deslocar, e ir ao estado 19
    SIMBOLO_BEGIN  deslocar, e ir ao estado 20
    SIMBOLO_CONST  deslocar, e ir ao estado 21
    SIMBOLO_VAR    deslocar, e ir ao estado 22

    error              [reduzir usando a regra 30 (dc_v)]
    SIMBOLO_BEGIN      [reduzir usando a regra 30 (dc_v)]
    SIMBOLO_PROCEDURE  reduzir usando a regra 30 (dc_v)

    dc_v  ir ao estado 23


Estado 12

   15 dc_c: SIMBOLO_CONST . IDENT '=' numero ';' dc_c
   17     | SIMBOLO_CONST . error '=' numero ';' dc_c
   18     | SIMBOLO_CONST . IDENT error numero ';' dc_c
   19     | SIMBOLO_CONST . IDENT '=' error ';' dc_c
   20     | SIMBOLO_CONST . IDENT '=' numero error dc_c
   21     | SIMBOLO_CONST . IDENT '=' numero ';' error

    error  deslocar, e ir ao estado 24
    IDENT  deslocar, e ir ao estado 25


Estado 13

    3 programa: SIMBOLO_PROGRAM error ';' corpo . '.'

    '.'  deslocar, e ir ao estado 26


Estado 14

    7 corpo: dc . SIMBOLO_BEGIN comandos SIMBOLO_END
    9      | dc . error comandos SIMBOLO_END
   10      | dc . SIMBOLO_BEGIN comandos error

    error          deslocar, e ir ao estado 27
    SIMBOLO_BEGIN  deslocar, e ir ao estado 28


Estado 15

   11 dc: dc_c . dc_v dc_p
   13   | dc_c . error dc_p
   14   | dc_c . dc_v error

    error        deslocar, e ir ao estado 29
    SIMBOLO_VAR  deslocar, e ir ao estado 22

    error              [reduzir usando a regra 30 (dc_v)]
    SIMBOLO_BEGIN      reduzir usando a regra 30 (dc_v)
    SIMBOLO_PROCEDURE  reduzir usando a regra 30 (dc_v)

    dc_v  ir ao estado 30


Estado 16

    4 programa: SIMBOLO_PROGRAM IDENT error corpo . '.'

    '.'  deslocar, e ir ao estado 31


Estado 17

    5 programa: SIMBOLO_PROGRAM IDENT ';' error . '.'
    8 corpo: error . SIMBOLO_BEGIN comandos SIMBOLO_END
   12 dc: error . dc_v dc_p
   16 dc_c: error . SIMBOLO_CONST IDENT '=' numero ';' dc_c

    error          deslocar, e ir ao estado 19
    SIMBOLO_BEGIN  deslocar, e ir ao estado 20
    SIMBOLO_CONST  deslocar, e ir ao estado 21
    SIMBOLO_VAR    deslocar, e ir ao estado 22
    '.'            deslocar, e ir ao estado 32

    error              [reduzir usando a regra 30 (dc_v)]
    SIMBOLO_BEGIN      [reduzir usando a regra 30 (dc_v)]
    SIMBOLO_PROCEDURE  reduzir usando a regra 30 (dc_v)

    dc_v  ir ao estado 23


Estado 18

    1 programa: SIMBOLO_PROGRAM IDENT ';' corpo . '.'
    6         | SIMBOLO_PROGRAM IDENT ';' corpo . error

    error  deslocar, e ir ao estado 33
    '.'    deslocar, e ir ao estado 34


Estado 19

   24 dc_v: error . variaveis ':' tipo_var ';' dc_v

    IDENT  deslocar, e ir ao estado 35

    variaveis  ir ao estado 36


Estado 20

    8 corpo: error SIMBOLO_BEGIN . comandos SIMBOLO_END

    IDENT          deslocar, e ir ao estado 37
    SIMBOLO_BEGIN  deslocar, e ir ao estado 38
    SIMBOLO_READ   deslocar, e ir ao estado 39
    SIMBOLO_WRITE  deslocar, e ir ao estado 40
    SIMBOLO_WHILE  deslocar, e ir ao estado 41
    SIMBOLO_IF     deslocar, e ir ao estado 42
    SIMBOLO_FOR    deslocar, e ir ao estado 43

    $padrão  reduzir usando a regra 54 (comandos)

    comandos  ir ao estado 44
    cmd       ir ao estado 45


Estado 21

   16 dc_c: error SIMBOLO_CONST . IDENT '=' numero ';' dc_c

    IDENT  deslocar, e ir ao estado 46


Estado 22

   23 dc_v: SIMBOLO_VAR . variaveis ':' tipo_var ';' dc_v
   25     | SIMBOLO_VAR . error ':' tipo_var ';' dc_v
   26     | SIMBOLO_VAR . variaveis error tipo_var ';' dc_v
   27     | SIMBOLO_VAR . variaveis ':' error ';' dc_v
   28     | SIMBOLO_VAR . variaveis ':' tipo_var error dc_v
   29     | SIMBOLO_VAR . variaveis ':' tipo_var ';' error

    error  deslocar, e ir ao estado 47
    IDENT  deslocar, e ir ao estado 35

    variaveis  ir ao estado 48


Estado 23

   12 dc: error dc_v . dc_p

    SIMBOLO_PROCEDURE  deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 38 (dc_p)

    dc_p  ir ao estado 50


Estado 24

   17 dc_c: SIMBOLO_CONST error . '=' numero ';' dc_c

    '='  deslocar, e ir ao estado 51


Estado 25

   15 dc_c: SIMBOLO_CONST IDENT . '=' numero ';' dc_c
   18     | SIMBOLO_CONST IDENT . error numero ';' dc_c
   19     | SIMBOLO_CONST IDENT . '=' error ';' dc_c
   20     | SIMBOLO_CONST IDENT . '=' numero error dc_c
   21     | SIMBOLO_CONST IDENT . '=' numero ';' error

    error  deslocar, e ir ao estado 52
    '='    deslocar, e ir ao estado 53


Estado 26

    3 programa: SIMBOLO_PROGRAM error ';' corpo '.' .

    $padrão  reduzir usando a regra 3 (programa)


Estado 27

    9 corpo: dc error . comandos SIMBOLO_END

    IDENT          deslocar, e ir ao estado 37
    SIMBOLO_BEGIN  deslocar, e ir ao estado 38
    SIMBOLO_READ   deslocar, e ir ao estado 39
    SIMBOLO_WRITE  deslocar, e ir ao estado 40
    SIMBOLO_WHILE  deslocar, e ir ao estado 41
    SIMBOLO_IF     deslocar, e ir ao estado 42
    SIMBOLO_FOR    deslocar, e ir ao estado 43

    $padrão  reduzir usando a regra 54 (comandos)

    comandos  ir ao estado 54
    cmd       ir ao estado 45


Estado 28

    7 corpo: dc SIMBOLO_BEGIN . comandos SIMBOLO_END
   10      | dc SIMBOLO_BEGIN . comandos error

    IDENT          deslocar, e ir ao estado 37
    SIMBOLO_BEGIN  deslocar, e ir ao estado 38
    SIMBOLO_READ   deslocar, e ir ao estado 39
    SIMBOLO_WRITE  deslocar, e ir ao estado 40
    SIMBOLO_WHILE  deslocar, e ir ao estado 41
    SIMBOLO_IF     deslocar, e ir ao estado 42
    SIMBOLO_FOR    deslocar, e ir ao estado 43

    $padrão  reduzir usando a regra 54 (comandos)

    comandos  ir ao estado 55
    cmd       ir ao estado 45


Estado 29

   13 dc: dc_c error . dc_p
   24 dc_v: error . variaveis ':' tipo_var ';' dc_v

    IDENT              deslocar, e ir ao estado 35
    SIMBOLO_PROCEDURE  deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 38 (dc_p)

    variaveis  ir ao estado 36
    dc_p       ir ao estado 56


Estado 30

   11 dc: dc_c dc_v . dc_p
   14   | dc_c dc_v . error

    error              deslocar, e ir ao estado 57
    SIMBOLO_PROCEDURE  deslocar, e ir ao estado 49

    error          [reduzir usando a regra 38 (dc_p)]
    SIMBOLO_BEGIN  reduzir usando a regra 38 (dc_p)

    dc_p  ir ao estado 58


Estado 31

    4 programa: SIMBOLO_PROGRAM IDENT error corpo '.' .

    $padrão  reduzir usando a regra 4 (programa)


Estado 32

    5 programa: SIMBOLO_PROGRAM IDENT ';' error '.' .

    $padrão  reduzir usando a regra 5 (programa)


Estado 33

    6 programa: SIMBOLO_PROGRAM IDENT ';' corpo error .

    $padrão  reduzir usando a regra 6 (programa)


Estado 34

    1 programa: SIMBOLO_PROGRAM IDENT ';' corpo '.' .

    $padrão  reduzir usando a regra 1 (programa)


Estado 35

   34 variaveis: IDENT . mais_var

    ','  deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 36 (mais_var)

    mais_var  ir ao estado 60


Estado 36

   24 dc_v: error variaveis . ':' tipo_var ';' dc_v

    ':'  deslocar, e ir ao estado 61


Estado 37

   60 cmd: IDENT . ':' '=' expressao
   61    | IDENT . lista_arg

    ':'  deslocar, e ir ao estado 62
    '('  deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 47 (lista_arg)

    lista_arg  ir ao estado 64


Estado 38

   62 cmd: SIMBOLO_BEGIN . comandos SIMBOLO_END

    IDENT          deslocar, e ir ao estado 37
    SIMBOLO_BEGIN  deslocar, e ir ao estado 38
    SIMBOLO_READ   deslocar, e ir ao estado 39
    SIMBOLO_WRITE  deslocar, e ir ao estado 40
    SIMBOLO_WHILE  deslocar, e ir ao estado 41
    SIMBOLO_IF     deslocar, e ir ao estado 42
    SIMBOLO_FOR    deslocar, e ir ao estado 43

    $padrão  reduzir usando a regra 54 (comandos)

    comandos  ir ao estado 65
    cmd       ir ao estado 45


Estado 39

   55 cmd: SIMBOLO_READ . '(' variaveis ')'

    '('  deslocar, e ir ao estado 66


Estado 40

   56 cmd: SIMBOLO_WRITE . '(' variaveis ')'

    '('  deslocar, e ir ao estado 67


Estado 41

   57 cmd: SIMBOLO_WHILE . '(' condicao ')' SIMBOLO_DO cmd
   58    | SIMBOLO_WHILE . error condicao ')' SIMBOLO_DO cmd

    error  deslocar, e ir ao estado 68
    '('    deslocar, e ir ao estado 69


Estado 42

   59 cmd: SIMBOLO_IF . condicao SIMBOLO_THEN cmd pfalsa

    '-'  deslocar, e ir ao estado 70
    '+'  deslocar, e ir ao estado 71

    $padrão  reduzir usando a regra 74 (op_un)

    condicao   ir ao estado 72
    expressao  ir ao estado 73
    op_un      ir ao estado 74
    termo      ir ao estado 75


Estado 43

   63 cmd: SIMBOLO_FOR . IDENT ':' '=' NUMERO_INT SIMBOLO_TO NUMERO_INT SIMBOLO_DO cmd

    IDENT  deslocar, e ir ao estado 76


Estado 44

    8 corpo: error SIMBOLO_BEGIN comandos . SIMBOLO_END

    SIMBOLO_END  deslocar, e ir ao estado 77


Estado 45

   53 comandos: cmd . ';' comandos

    ';'  deslocar, e ir ao estado 78


Estado 46

   16 dc_c: error SIMBOLO_CONST IDENT . '=' numero ';' dc_c

    '='  deslocar, e ir ao estado 79


Estado 47

   25 dc_v: SIMBOLO_VAR error . ':' tipo_var ';' dc_v

    ':'  deslocar, e ir ao estado 80


Estado 48

   23 dc_v: SIMBOLO_VAR variaveis . ':' tipo_var ';' dc_v
   26     | SIMBOLO_VAR variaveis . error tipo_var ';' dc_v
   27     | SIMBOLO_VAR variaveis . ':' error ';' dc_v
   28     | SIMBOLO_VAR variaveis . ':' tipo_var error dc_v
   29     | SIMBOLO_VAR variaveis . ':' tipo_var ';' error

    error  deslocar, e ir ao estado 81
    ':'    deslocar, e ir ao estado 82


Estado 49

   37 dc_p: SIMBOLO_PROCEDURE . IDENT parametros ';' corpo_p dc_p

    IDENT  deslocar, e ir ao estado 83


Estado 50

   12 dc: error dc_v dc_p .

    $padrão  reduzir usando a regra 12 (dc)


Estado 51

   17 dc_c: SIMBOLO_CONST error '=' . numero ';' dc_c
